--- a/force-app/main/default/classes/Action_EditLocationRemote.cls
+++ b/force-app/main/default/classes/Action_EditLocationRemote.cls
@@ -57,7 +57,8 @@ public without sharing class Action_EditLocationRemote {
                             BillingCountryCode,
                             BillingStateCode,
                             BillingState,
-                            BillingStreet
+                            BillingStreet,
+                            BillingPostalCode
                     FROM Account
                     WHERE Id = :tmpAccountId
             ];
