--- a/force-app/main/default/classes/TrialSearchWhereClauseFactory.cls
+++ b/force-app/main/default/classes/TrialSearchWhereClauseFactory.cls
@@ -86,7 +86,7 @@ public with sharing class TrialSearchWhereClauseFactory {
 
         public String getWhereClause() {
             Boolean emptyTaIds = taIds == null || taIds.isEmpty();
-            return emptyTaIds ? '' : 'WHERE Therapeutic_Area__c IN ' + '(\'' + String.join(taIds, '\',\'') + '\') ';
+            return emptyTaIds ? '' : 'WHERE Therapeutic_Area__c IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(taIds)) + ') ';
         }
 
     }
@@ -102,7 +102,7 @@ public with sharing class TrialSearchWhereClauseFactory {
 
         public override String getWhereClause() {
             return (String.isBlank(clause.getWhereClause()) ? 'WHERE' : clause.getWhereClause() + 'AND') +
-                    ' Id IN (SELECT Clinical_Trial_Profile__c FROM Study_Site__c WHERE Id IN (\'' + String.join(qCareSSIds, '\',\'') + '\')) ';
+                    ' Id IN (SELECT Clinical_Trial_Profile__c FROM Study_Site__c WHERE Id IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(qCareSSIds)) + ')) ';
         }
     }
 
@@ -115,7 +115,7 @@ public with sharing class TrialSearchWhereClauseFactory {
         public override String getWhereClause() {
             return (String.isBlank(clause.getWhereClause()) ? 'WHERE' : clause.getWhereClause() + 'AND') +
                     ' (Override_Recruitment_Status__c = ' + '\'' + ACTIVELY_ENROLLING + '\' ' +
-                    'OR Override_Recruitment_Status__c IN ' + '(\'' + String.join(CTMS_RECRUITMENT_ENROLLING, '\',\'') + '\')) ';
+                    'OR Override_Recruitment_Status__c IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(CTMS_RECRUITMENT_ENROLLING)) + ')) ';
         }
     }
 
@@ -128,7 +128,7 @@ public with sharing class TrialSearchWhereClauseFactory {
         public override String getWhereClause() {
             return (String.isBlank(clause.getWhereClause()) ? 'WHERE' : clause.getWhereClause() + 'AND') +
                     ' (Override_Recruitment_Status__c = ' + '\'' + ON_HOLD + '\' ' +
-                    'OR Override_Recruitment_Status__c IN ' + '(\'' + String.join(CTMS_ON_HOLD, '\',\'') + '\')) ';
+                    'OR Override_Recruitment_Status__c IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(CTMS_ON_HOLD)) + ')) ';
         }
     }
 
@@ -140,8 +140,8 @@ public with sharing class TrialSearchWhereClauseFactory {
 
         public override String getWhereClause() {
             return (String.isBlank(clause.getWhereClause()) ? 'WHERE' : clause.getWhereClause() + 'AND') +
-                    ' (Override_Recruitment_Status__c IN ' + '(\'' + String.join(ORS_STATUS_ENROLLING, '\',\'') + '\') ' +
-                    'OR Override_Recruitment_Status__c IN ' + '(\'' + String.join(CTMS_RECRUITMENT, '\',\'') + '\')) ';
+                    ' (Override_Recruitment_Status__c IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(ORS_STATUS_ENROLLING)) + ') ' +
+                    'OR Override_Recruitment_Status__c IN (' + CollectionUtil.joinByComa(CollectionUtil.wrapInApostrophes(CTMS_RECRUITMENT)) + ')) ';
         }
     }
 
